z-index corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2 {
 .pos-f-t {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 101;
     
 }
 #myJournal {
